# TSDB_test0

./: .pgpass  README.md  alembic.ini  data.csv  pyproject.toml  setData.sql  testQoutput.txt  testQuery.sql
charts/: values.yaml
